# Music-Player

./: .gitignore  README.md  pyproject.toml
docs/plans/: 2026-02-24-music-player-v1-foundation-and-features.md
rust_back_end/: Cargo.toml
rust_back_end/src/: artwork.rs  lib.rs  metadata.rs  scanner.rs
src/: main.py
src/app/back_end/: app_bootstrap.py
src/app/back_end/controllers/: favorites_controller.py  metadata_controller.py  playlist_controller.py
src/app/back_end/data/database_handler/: database.py
src/app/back_end/data/repositories/: repository.py
src/app/back_end/services/: artwork_service.py  playback_service.py  queue_service.py  rust_bridge.py
src/app/back_end/utils/: class_method_request_models.py  class_method_response_models.py  error_messages.py  success_messages.py
src/app/front_end/: main_window.py  metadata_editor_dialog.py  now_playing_bar.py  playlist_view.py
tests/: conftest.py  test_project_structure.py
tests/back_end/controllers/: test_favorites_controller.py  test_metadata_controller.py  test_playlist_controller.py
tests/back_end/data/: test_database_schema.py
tests/back_end/services/: test_artwork_service.py  test_playback_service.py  test_queue_service.py  test_rust_bridge.py  test_rust_metadata_bridge.py
tests/back_end/utils/: test_response_models.py
tests/front_end/: test_main_window_settings.py  test_main_window_theme.py  test_metadata_editor_dialog.py  test_now_playing_bar.py
tests/integration/: test_end_to_end_playlist_reorder_and_playback_flow.py
tests/manual/: manual_test_checklist.md
