[package]
name = "rust_back_end"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_back_end_native"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.26", features = ["extension-module"] }
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
